<resources>
    <string name="app_name">PongDroid</string>
    <string name="action_settings">Settings</string>
    <string name="single_player">SinglePlayer</string>
    <string name="multi_player">MultiPlayer</string>
    <string name="info">Info</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="game">Game</string>
</resources>
