<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:text="@string/easy"
        android:onClick="easyMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:id="@+id/easy" />

    <Button
        android:text="@string/medium"
        android:onClick="mediumMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:id="@+id/medium"/>

    <Button
        android:text="@string/hard"
        android:onClick="hardMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:id="@+id/hard" />


</LinearLayout>
