<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:text="@string/easy"
        android:onClick="easyMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:width="250dp"
        android:id="@+id/button3" />

    <Button
        android:text="@string/medium"
        android:onClick="mediumMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:width="250dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:text="@string/hard"
        android:onClick="hardMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="154dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:width="250dp"
        android:id="@+id/button2" />


</RelativeLayout>
